# STP26-Table-Extraction-Machathon-7

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Phase1_EDA_Data_Diagnostics.ipynb  Phase_Preprocessing_Data_Engineering.ipynb  README.md  backend-requirements.txt  docker-compose.yml  merged.ipynb  modal_app.py  pip-requirements-py12.txt  pyproject.toml  soliman-eda.ipynb  submission_notebook.ipynb  table-region-detection - exp 1.ipynb  table-region-detection.ipynb  table_detection.ipynb  test_surya.ipynb  test_tatr.ipynb  visualize_preprocessed.py
Chatbot/: context_builder.py  knowledge.py  server.py
Data engineering/: Annotation_Cleaning.ipynb
Pure Inference for TSR/: tsr_inference_results.json
TATR_TD_and_TSR/: Part1_Environment_Data_Preparation.ipynb  Part2_TD_Baseline_Inference.ipynb  Part3_TSR_Enhanced_LoRA_Training.ipynb
TDATR/: .gitignore  infer.sh  requirements.txt
TDATR/TDATR/: __init__.py
TDATR/TDATR_utils/: call_main.py  constants.py  dataclass.py  forward_step.py  global_context.py  global_variables.py  (+6 more)
YOLOv10/: Full_Notebook.ipynb  Phase2_Preprocessing_Data_Engineering.ipynb  Phase3_4_YOLOv10_Training_Inference.ipynb
app/: config.py  database.py  main.py
base inference test/: base-inference-comparison.ipynb
context/: competition-description.md  dataset-description.md  surya-experiment-doc.md
front/: components.json  copierv1.py  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
model-related/: Architecture_Modules_and_Configurations.md  Phase0_EDA_Data_Diagnostics.ipynb  data_description.md
(+111 files in other folders)
