
[project]
name = "stp26-table-extraction-machathon-7"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "surya-ocr>=0.17.1",
    "torchmetrics>=1.8.2",
    "transformers==4.56.1",
    "ultralytics>=8.4.14",
]
